[project]
name = "claude-test"
version = "0.1.0"
description = "Flask web application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
]

[project.scripts]
claude-test = "claude_test.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_test"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
